--- a/01-Tensors.ipynb
+++ b/01-Tensors.ipynb
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "rising-absorption",
+   "id": "funky-yugoslavia",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "determined-charter",
+   "id": "biblical-trader",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "difficult-swaziland",
+   "id": "lucky-windsor",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "following-lambda",
+   "id": "little-crash",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "precise-aquatic",
+   "id": "addressed-collector",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "final-blackberry",
+   "id": "alternate-welding",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "unauthorized-failing",
+   "id": "fresh-peace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "minus-arrangement",
+   "id": "charitable-claim",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "excessive-tribune",
+   "id": "moderate-judge",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "greek-argentina",
+   "id": "contained-compiler",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "helpful-giving",
+   "id": "romance-garage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "determined-third",
+   "id": "olympic-crack",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "alternative-roulette",
+   "id": "naval-anderson",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "suspected-produce",
+   "id": "prime-console",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "necessary-founder",
+   "id": "dense-archive",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "basic-stopping",
+   "id": "threatened-disclosure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "cordless-forestry",
+   "id": "polyphonic-classroom",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "metallic-attack",
+   "id": "vietnamese-dance",
    "metadata": {},
    "outputs": [
     {
@@ -487,31 +487,261 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "invisible-tuition",
+   "id": "cubic-complex",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "id": "difficult-cookbook",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multiplying tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "physical-favor",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 2., 1.],\n",
+       "        [1., 0., 2., 1.],\n",
+       "        [1., 0., 2., 1.],\n",
+       "        [1., 0., 2., 1.]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor = torch.ones(4, 4)\n",
+    "tensor[:, 1] = 0\n",
+    "tensor[:, 2] = 2\n",
+    "tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "associate-speaker",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 4., 1.],\n",
+       "        [1., 0., 4., 1.],\n",
+       "        [1., 0., 4., 1.],\n",
+       "        [1., 0., 4., 1.]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1st way: \n",
+    "tensor.mul(tensor)  # element-wise product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "interesting-production",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 4., 1.],\n",
+       "        [1., 0., 4., 1.],\n",
+       "        [1., 0., 4., 1.],\n",
+       "        [1., 0., 4., 1.]])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2nd way:\n",
+    "tensor * tensor  # element-wise product"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "southeast-rapid",
+   "id": "twelve-placement",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "id": "athletic-carpet",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Matrix muliplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "registered-jason",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[6., 6., 6., 6.],\n",
+       "        [6., 6., 6., 6.],\n",
+       "        [6., 6., 6., 6.],\n",
+       "        [6., 6., 6., 6.]])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor.matmul(tensor.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "going-sweet",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[6., 6., 6., 6.],\n",
+       "        [6., 6., 6., 6.],\n",
+       "        [6., 6., 6., 6.],\n",
+       "        [6., 6., 6., 6.]])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor @ tensor.T"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "frozen-explosion",
+   "id": "synthetic-entrepreneur",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 76,
+   "id": "random-clothing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## In-place operations: _ ##\n",
+    "\n",
+    "# Operations that have a `_` suffix are in-place.\n",
+    "# For example, x.copy_(y), x.t_() will change x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "loose-coral",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 2., 1.],\n",
+       "        [1., 0., 2., 1.],\n",
+       "        [1., 0., 2., 1.],\n",
+       "        [1., 0., 2., 1.]])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "impressive-ground",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[6., 5., 7., 6.],\n",
+       "        [6., 5., 7., 6.],\n",
+       "        [6., 5., 7., 6.],\n",
+       "        [6., 5., 7., 6.]])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor.add_(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "returning-montgomery",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[6., 5., 7., 6.],\n",
+       "        [6., 5., 7., 6.],\n",
+       "        [6., 5., 7., 6.],\n",
+       "        [6., 5., 7., 6.]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor  # Changed"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "driving-retailer",
+   "id": "determined-westminster",
    "metadata": {},
    "outputs": [],
    "source": []
